--- a/about.html
+++ b/about.html
@@ -163,8 +163,8 @@
         <h2>Our Story: Building on Strength and Reliability</h2>
         <div class="about-content">
             <div class="about-card">
-                <h3>Our Legacy: Since 1996</h3>
-                <p><strong>POPULAR FITTINGS</strong> began its journey in 1996 as a family-owned business, founded by the visionary Mr. Istiyaque Ahmed. From humble beginnings, we have grown into a leading stockist and manufacturer of industrial flanges in Mumbai, building our reputation on the pillars of unwavering quality, supreme customer satisfaction, and unparalleled service. Our deep-rooted experience in the industry has allowed us to consistently exceed expectations and forge lasting relationships with our clients.</p>
+                <h3>Our Legacy: Since 2004</h3>
+                <p><strong>POPULAR FITTINGS</strong> began its journey in 2004 as a family-owned business, founded by the visionary Mr. Istiyaque Ahmed. From humble beginnings, we have grown into a leading stockist and manufacturer of industrial flanges in Mumbai, building our reputation on the pillars of unwavering quality, supreme customer satisfaction, and unparalleled service. Our deep-rooted experience in the industry has allowed us to consistently exceed expectations and forge lasting relationships with our clients.</p>
             </div>
             <div class="about-card">
                 <h3>Our Vision</h3>
@@ -209,7 +209,7 @@
         <p class="footer-bottom">&copy; 2025 Popular fittings . All rights reserved.</p>
     </footer>
 
-    <a href="https://wa.me/+918850039014?text=Contact%20Us" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/+918850039014?text=Hi,%20I%20visited%20your%20website" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
