--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
         <div class="about-content">
             <div class="about-card">
                 <h3>Our Legacy: Since 2004</h3>
-                <p><strong>POPULAR FITTINGS</strong> began its journey in 2004 as a family-owned business, founded by the visionary Mr. Istiyaque Ahmed. From humble beginnings, we have grown into a leading stockist and manufacturer of industrial flanges in Mumbai, building our reputation on the pillars of unwavering quality, supreme customer satisfaction, and unparalleled service. Our deep-rooted experience in the industry has allowed us to consistently exceed expectations and forge lasting relationships with our clients.</p>
+                <p><strong>POPULAR FITTINGS</strong> began its journey in 2004 as a family-owned business, founded by the visionary Mr. Ishtiyaque Ahmed. From humble beginnings, we have grown into a leading stockist and manufacturer of industrial flanges in Mumbai, building our reputation on the pillars of unwavering quality, supreme customer satisfaction, and unparalleled service. Our deep-rooted experience in the industry has allowed us to consistently exceed expectations and forge lasting relationships with our clients.</p>
             </div>
             <div class="about-card">
                 <h3>Our Vision</h3>
