--- a/product.html
+++ b/product.html
@@ -347,7 +347,7 @@
         <p class="footer-bottom">&copy; 2025 Popular fittings. All rights reserved.</p>
     </footer>
 
-    <a href="https://wa.me/+918850039014?text=Contact%20Us" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/+918850039014?text=Hi,%20I%20visited%20your%20website" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
