--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
     <div class="footer-content">
       <div class="contact">
         <h3>Contact Us</h3>
-        <p>Email: popularfittings@gmail.com</p>
-        <p>Phone: +918850039014 </p>
-        <p>REGD.OFFICE & GODOWN: Gala no 1289, survey no 69/11, Mohammadiya Estate, Pimpri thane-400612 Maharashtra.</p>
+        <p> Email: <u>popularfittings@gmail.com </u> </p>
+        <p>Phone: +918850039014 </p> <br>
+        <p>REGD.OFFICE & GODOWN: Gala no 1289, survey no 69/11, Mohammadiya Estate, Pimpri thane-400612 Maharashtra.</p> <br>
       <p>Godown2:B.P.T plot no.222, kolasabunder, Darukhana Mumbi- 400 010 </p></div>
       <div class="social-media">
         <h3>Follow Us</h3>
