--- a/contactus.html
+++ b/contactus.html
@@ -156,7 +156,7 @@
                 <h3>Contact Information</h3>
                 <p><i class="fas fa-phone"></i> +91 8850039014</p>
                 <p><i class="fas fa-envelope"></i> popularfittings@gmail.com</p>
-                <p><i class="fas fa-globe"></i> www.popularfittings.com (placeholder, if you have one)</p>
+                <p><i class="fas fa-globe"></i> www.popularfittings.com </p>
             </div>
             <div class="contact-info-card">
                 <h3>Registered Office & Godown 1</h3>
