--- a/product.html
+++ b/product.html
@@ -205,7 +205,7 @@
             }
 
             .product-item img {
-                height: 200px; /* Adjust image height for mobile */
+                height: 310px; /* Adjust image height for mobile */
             }
 
             .product-info h3 {
@@ -334,7 +334,7 @@
                 <p>Email: popularfittings@gmail.com</p>
                 <p>Phone: +918850039014 </p>
                 <p>REGD.OFFICE & GODOWN: Gala no 1289, survey no 69/11, Mohammadiya Estate, Pimpri thane-400612 Maharashtra.</p>
-                <p>Godown2:B.P.T plot no.222, kolasabunder, Darukhana Mumbi- 400 010 </p>
+                <p>Godown2:B.P.T plot no.222, kolasabunder, Darukhana Mumbai- 400 010 </p>
             </div>
             <div class="social-media">
                 <h3>Follow Us</h3>
