--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
 
         .product-item img {
             width: 100%;
-            height: 250px;
+            height: max-content;
             object-fit: cover;
             display: block;
             transition: transform 0.5s ease;
