--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="bodydesign.css">
   <link rel="stylesheet" href="chatbutton.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-   <link rel="icon" href="favicon.ico">
+   <link rel="icon" href="favicon1.png">
  
 
 <style>
@@ -460,5 +460,6 @@ document.addEventListener('keydown', (event) => {
 
 </body>
 </html>
+
 
 
