--- a/contactus.html
+++ b/contactus.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bodydesign.css">
     <link rel="stylesheet" href="chatbutton.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="icon" href="favicon1.png">
     <style>
         /* Specific styles for Contact Us page */
         .contact-section {
@@ -222,3 +223,4 @@
 
 </body>
 </html>
+
